bug fix: modal align

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -632,6 +632,7 @@ img{
     bottom: 0;
     background-color: rgba(0, 0, 0, .55);
     display: flex;
+    align-items: center;
     justify-content: center;
     padding: 0 1rem;
     z-index: var(--z-modal);
